# v360

./: README.md  class_definations.py  client.py  client_class.py  environment.yaml  environment_client.yaml  functions.py  get_waist_pixels.py  main.py  requirements.txt  requirements_client.txt  socket_client.py  socket_server.py  steps.txt  streamlit_architecture.py  streamlit_class.py  streamlit_client.py  streamlit_client_class.py  streamlit_server.py  streamlit_server_class.py  streamlit_visual_try_on.py
devel/: .catkin  _setup_util.py
devel/lib/pkgconfig/: pose_estimation.pc
devel/lib/pose_estimation/: get_selected_indices  visualize_data  webcam_topic_publish
devel/share/pose_estimation/cmake/: pose_estimation-msg-paths.cmake  pose_estimationConfig.cmake
devel/share/roseus/ros/pose_estimation/: manifest.l
html_pages/: html.htm
src/pose_estimation/: CMakeLists.txt  package.xml
src/pose_estimation/data/: indices.txt  waist_indices_final.txt
src/pose_estimation/include/: main_class.h
src/pose_estimation/scripts/: class_definations.py  flask1.py  functions.py  get_waist_pixels.py  main.py  streamlit_architecture.py  streamlit_class.py  streamlit_live_streaming.py
src/pose_estimation/scripts/templates/: index.html
src/pose_estimation/src/: definations.cpp  get_selected_indices.cpp  visualize_data.cpp  webcam_topic_publish.cpp
templates/: index.html
weights/: empty.txt
